<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_white_20"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/delete_confirmation_title"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_close"
                app:tint="@color/text_gray"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/iv_delete_icon"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_delete"
            android:background="@drawable/shape_circle"
            android:backgroundTint="#FFF1F3"
            android:padding="@dimen/_16sdp"
            app:tint="#FF1744" />

    <TextView
            android:id="@+id/tv_confirm_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/font_bold"
            android:text="@string/delete_confirmation_message"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_14ssp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/font_regular"
            android:text="@string/undone_action_warning"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/_11ssp" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/bg_btn_create"
            android:fontFamily="@font/font_bold"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@null" />

</androidx.appcompat.widget.LinearLayoutCompat>