<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:background="@drawable/bg_rectangle_gray_radius_24"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_wifi_lost"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/ic_wifi_lost" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/baloo2_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/text_connection_lost"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/baloo2_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/text_check_your_internet_connection_and_try_again"
                android:textColor="#666666"
                android:textSize="@dimen/_13ssp" />

        <Button
                android:id="@+id/buttonSetting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/bg_btn_create"
                android:fontFamily="@font/baloo2_semibold"
                android:text="@string/text_setting"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>